[package]
name = "luno-rs"
version = "0.1.0"
description = "Luno API"
authors = ["Samuel Fatoki <samfatoks@gmail.com>"]
repository = "https://github.com/samfatoks/luno-rs"
documentation = "https://docs.rs/surf"
keywords = ["luno", "client", "async", "crypto", "bitcoin"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
base64 = "0.13"
surf = "2.1.0"
async-std = { version = "1.8.0" }
url = "2.2.0"
serde = "1.0.118"