[package]
name = "luno-rs"
version = "0.1.1"
description = "A lightweight Rust wrapper for Luno API"
authors = ["Samuel Fatoki <samfatoks@gmail.com>"]
repository = "https://github.com/samfatoks/luno-rs"
documentation = "https://docs.rs/luno-rs"
keywords = ["luno", "client", "async", "crypto", "bitcoin"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
log = "0.4"
base64 = "0.13"
surf = { version = "2.1.0", default-features = false, features = ["h1-client"] }
async-std = { version = "1.8.0", default-features = false }
url = "2.2.0"
serde = "1.0.118"
chrono = { version = "0.4.15", features = ["serde"] } 
futures-util = "0.3.8"

[dev-dependencies]
serde_json = "1.0.60"
async-std = { version = "1.8.0", default-features = false, features = ["attributes"] }